<resources>
    <string name="app_name">Carminder</string>
    <string name="title_settings">Settings</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_validate_status">Validate MTPL</string>
    <string name="action_show_car_plates">Car plates</string>
    <string name="action_show_all_car_events">All events</string>
    <string name="action_settings">Settings</string>

    <string name="action_add_event">Add event</string>
    <string name="action_modify_event">Modify event</string>
    <string name="action_delete_event">Delete</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_validate">Validate</string>
    <string name="action_save">Save</string>
    <string name="action_save_results">Save results</string>
    <string name="action_ok">OK</string>
    <string name="confirm_action">Are you sure ?</string>

    <!-- Preferences -->
    <string name="pref_title_days">Notify before event days</string>
    <string name="pref_key_days" translatable="false">alarm_timeout</string>
    <string name="pref_default_days" translatable="false">2</string>


    <string name="pref_title_calendar_events">Add events to calendar</string>
    <string name="pref_key_calendar_events" translatable="false">calendar_events</string>
    <string name="pref_summary_off_calendar_events">Disabled</string>
    <string name="pref_summary_on_calendar_events">Enabled</string>
    <string name="pref_default_calendar_events" translatable="false">false</string>


    <string name="title_activity_status">Check status</string>

    <!-- provider -->
    <string name="content_authority">uk.to.carminder.app</string>
    <string name="search_authority">"uk.to.carminder.app.SearchProvider"</string>

    <!-- messages -->
    <string name="message_no_internet_connection">Internet unavailable</string>
    <string name="message_connect_to_internet">Please connect to Internet and retry</string>
    <string name="message_unknown_command">Skippping request due to unknown command</string>


    <string name="hint_car_number_plate">Car plate, eg: CJ00ABC</string>
    <string name="hint_event_description">Event description</string>
    <string name="hint_event_name">Event name</string>
    <string name="message_invalid_data">Wrong data type for command</string>
    <string name="notification_title">Events about to expire</string>
    <string name="message_press_for_actions">Press on event\'s date to add it to calendar</string>
    <string name="message_choose_app">Choose app</string>
    <string name="message_no_activity_found">There is no activity found for adding calendar events</string>
    <string name="message_invalid_car_plate_retry">Invalid car plate, please retry</string>
    <string name="message_invalid_event_retry">Invalid event name, please retry</string>
    <string name="message_invalid_expire_date_retry">Invalid expire date, please retry</string>
    <string name="message_invalid_car_plate_empty_retry">Will not validate an empty car plate, please retry</string>
    <string name="message_no_data_received">No data received</string>
    <string name="message_server_down">Server could be down, please try again later</string>
    <string name="notification_message">%1$s   Event %2$s # %3$s</string>

</resources>
