<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".NavigationDrawerFragment"
    android:orientation="vertical"
    android:background="#cccc">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_validate_status"
        android:focusableInTouchMode="false"
        android:paddingLeft="10dp"
        android:paddingTop="15dp"
        android:paddingRight="10dp"
        android:paddingBottom="15dp">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:id="@+id/imageView4"
            android:layout_weight="1"
            android:src="@android:drawable/star_big_on" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:text="@string/action_validate_status"
            android:layout_weight="5"
            android:gravity="center"
            android:textAppearance="?android:textAppearanceLarge"
            android:typeface="monospace" />

    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_show_events"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:id="@+id/imageView6"
            android:src="@drawable/ic_calendar"
            android:layout_weight="1" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:text="@string/action_show_all_car_events"
            android:id="@+id/textView5"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_weight="5" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_show_car_plates"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:id="@+id/imageView3"
            android:src="@drawable/car_launcher"
            android:layout_weight="1" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:text="@string/action_show_car_plates"
            android:id="@+id/textView2"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_weight="5" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_gravity="center"
        android:id="@+id/btn_show_settings">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:id="@+id/imageView2"
            android:src="@android:drawable/ic_menu_preferences"
            android:layout_weight="1" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:text="@string/action_settings"
            android:id="@+id/textView"
            android:layout_gravity="center"
            android:layout_weight="5"
            android:gravity="center" />
    </LinearLayout>

</LinearLayout>